--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog del post</h1>
-    <p>Y este es el párrafo de inicio</p>
+
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e intereasnte del post</h1>
+            <p>Y este es el párrafo de inicio donde vamos a explicar las cosas
+                increeíbles que se pueden hacer con ramas 
+            </p>
+
+        </div>
+    </div>
 </body>
 </html>
