--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
 
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="#tagline"> Tu blog de confianza </span>
+            Hyperblog <span id="#tagline"> Tu blog maetro </span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e intereasnte del post</h1>
@@ -23,6 +23,7 @@
                 conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no 
                 lo eres... por ahora.
             </p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
