--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
         <div id="post">
             <h1>Este es el título atractivo e intereasnte del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas
-                increeíbles que se pueden hacer con ramas 
+                increíbles que se pueden hacer con ramas 
             </p>
             <p>
                 Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a 
